--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
         "storyblok-react": "^0.1.2"
     },
     "devDependencies": {
+        "autoprefixer": "^10.3.5",
         "eslint": "^7.26.0",
         "eslint-plugin-react": "^7.23.2",
-        "prettier": "2.2.1"
+        "gatsby-plugin-postcss": "^4.14.0",
+        "postcss": "^8.3.7",
+        "prettier": "2.2.1",
+        "tailwindcss": "^2.2.15"
     },
     "keywords": [
         "gatsby"
