--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "version": "0.1.0",
     "author": "Lisi Linhart",
     "dependencies": {
+        "@headlessui/react": "^1.4.1",
+        "@heroicons/react": "^1.0.4",
+        "@tailwindcss/forms": "^0.3.3",
+        "clsx": "^1.1.1",
         "gatsby": "^3.4.1",
         "gatsby-plugin-gatsby-cloud": "^2.4.1",
         "gatsby-plugin-image": "^1.4.0",
@@ -19,8 +23,11 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
+        "react-icons": "^4.2.0",
+        "react-slick": "^0.28.1",
         "storyblok-js-client": "^4.0.9",
-        "storyblok-react": "^0.1.2"
+        "storyblok-react": "^0.1.2",
+        "swiper": "^7.0.6"
     },
     "devDependencies": {
         "autoprefixer": "^10.3.5",
