--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
         "react-icons": "^4.2.0",
+        "slugify": "^1.6.1",
         "storyblok-js-client": "^4.0.9",
         "storyblok-react": "^0.1.2",
         "swiper": "^7.0.6"
