--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "version": "0.1.0",
     "author": "Lisi Linhart",
     "dependencies": {
+        "@fontsource/open-sans": "^4.5.2",
         "@headlessui/react": "^1.4.1",
         "@heroicons/react": "^1.0.4",
         "@tailwindcss/forms": "^0.3.3",
