--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@fontsource/open-sans": "^4.5.2",
         "@headlessui/react": "^1.4.1",
         "@heroicons/react": "^1.0.4",
+        "@hookform/resolvers": "^2.8.3",
         "@tailwindcss/forms": "^0.3.3",
         "clsx": "^1.1.1",
         "gatsby": "^3.4.1",
@@ -24,11 +25,13 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-helmet": "^6.1.0",
+        "react-hook-form": "^7.20.4",
         "react-icons": "^4.2.0",
         "slugify": "^1.6.1",
         "storyblok-js-client": "^4.0.9",
         "storyblok-react": "^0.1.2",
-        "swiper": "^7.0.6"
+        "swiper": "^7.0.6",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "autoprefixer": "^10.3.5",
