--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "devDependencies": {
         "autoprefixer": "^10.3.5",
         "eslint": "^7.26.0",
+        "eslint-plugin-import-order-alphabetical": "^1.0.1",
         "eslint-plugin-react": "^7.23.2",
         "gatsby-plugin-postcss": "^4.14.0",
         "postcss": "^8.3.7",
