--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
         "@tailwindcss/forms": "^0.3.3",
         "clsx": "^1.1.1",
         "gatsby": "^3.4.1",
+        "gatsby-plugin-advanced-sitemap": "^2.0.0",
         "gatsby-plugin-gatsby-cloud": "^2.4.1",
         "gatsby-plugin-image": "^1.4.0",
         "gatsby-plugin-manifest": "^3.4.0",
         "gatsby-plugin-offline": "^4.4.0",
         "gatsby-plugin-react-helmet": "^4.4.0",
+        "gatsby-plugin-robots-txt": "^1.7.0",
         "gatsby-plugin-sharp": "^3.4.1",
         "gatsby-source-filesystem": "^3.4.0",
         "gatsby-source-storyblok": "^3.0.1",
