--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "gatsby": "^3.4.1",
         "gatsby-plugin-advanced-sitemap": "^2.0.0",
         "gatsby-plugin-gatsby-cloud": "^2.4.1",
+        "gatsby-plugin-google-tagmanager": "^4.8.0",
         "gatsby-plugin-image": "^1.4.0",
         "gatsby-plugin-manifest": "^3.4.0",
         "gatsby-plugin-offline": "^4.4.0",
