--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-helmet": "^6.1.0",
         "react-hook-form": "^7.20.4",
         "react-icons": "^4.2.0",
+        "react-responsive": "^9.0.0-beta.6",
         "slugify": "^1.6.1",
         "storyblok-js-client": "^4.0.9",
         "storyblok-react": "^0.1.2",
